# usergator

./: README.md  pyproject.toml
src/usergator/: checker.py  cli.py  sites.py
