[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usergator"
version = "0.1.0"
description = "Legal OSINT username footprint checker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
]

[project.scripts]
usergator = "usergator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/usergator"]
